--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fresh-forms",
-  "version": "1.0.0",
+  "name": "@leveluptuts/fresh",
+  "version": "0.0.1",
   "description": "They&#x27;re fresh, they&#x27;re dope, they&#x27;re bufu",
   "author": "leveluptuts",
   "license": "MIT",
