--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "dist"
   ],
   "dependencies": {
-    "@babel/plugin-external-helpers": "^7.2.0"
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "react-tagsinput": "^3.19.0"
   }
 }
