improves readme and completes initial api

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@leveluptuts/fresh",
-  "version": "0.0.1",
-  "description": "They&#x27;re fresh, they&#x27;re dope, they&#x27;re bufu",
+  "version": "0.0.2",
+  "description": "They're dope, they're fresh.",
   "author": "leveluptuts",
   "license": "MIT",
   "repository": "leveluptuts/fresh-forms",
