--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
     "@svgr/rollup": "^4.3.2",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
     "babel-plugin-react-require": "^3.1.1",
     "cross-env": "^5.1.4",
+    "css-loader": "^3.1.0",
+    "docz": "^2.0.0-rc.1",
+    "docz-theme-default": "^1.2.0",
     "eslint": "^6.1.0",
     "eslint-config-standard": "^13.0.1",
     "eslint-config-standard-react": "^8.0.0",
@@ -45,22 +49,25 @@
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^4.0.0",
     "gh-pages": "^2.0.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1",
+    "react-styleguidist": "^9.1.13",
     "rollup": "^1.17.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-url": "^2.2.2"
+    "rollup-plugin-url": "^2.2.2",
+    "style-loader": "^0.23.1"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
     "@babel/plugin-external-helpers": "^7.2.0",
+    "lodash": "^4.17.15",
     "react-tagsinput": "^3.19.0"
   }
 }
