--- a/example/package.json
+++ b/example/package.json
@@ -5,8 +5,9 @@
   "homepage": "./",
   "dependencies": {
     "@leveluptuts/fresh": "link:..",
-    "react": "link:../node_modules/react",
-    "react-dom": "link:../node_modules/react-dom",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "prop-types": "^15.5.4",
     "react-scripts": "3.0.1",
     "styled-components": "^5.0.0-beta.8"
   },
