--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "They're dope, they're fresh.",
   "author": "leveluptuts",
   "license": "MIT",
-  "repository": "leveluptuts/fresh-forms",
+  "repository": "leveluptuts/fresh",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
@@ -46,9 +46,7 @@
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^4.0.0",
     "gh-pages": "^2.0.1",
-    "lodash": "^4.17.15",
     "markdown-to-jsx": "^6.10.2",
-    "react-scripts": "^3.0.1",
     "react-tagsinput": "^3.19.0",
     "rollup": "^1.17.0",
     "rollup-plugin-babel": "^4.3.3",
