big changees to how formdata registeres fields

--- a/package.json
+++ b/package.json
@@ -38,15 +38,18 @@
     "cross-env": "^5.1.4",
     "css-loader": "^3.1.0",
     "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-config-standard": "^13.0.1",
     "eslint-config-standard-react": "^8.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^4.0.0",
     "gh-pages": "^2.0.1",
     "markdown-to-jsx": "^6.10.2",
+    "prettier": "1.18.2",
     "react-tagsinput": "^3.19.0",
     "rollup": "^1.17.0",
     "rollup-plugin-babel": "^4.3.3",
