--- a/example/package.json
+++ b/example/package.json
@@ -8,8 +8,7 @@
     "prop-types": "^15.5.4",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-scripts": "3.0.1",
-    "styled-components": "^5.0.0-beta.8"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
