--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leveluptuts/fresh",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "They're dope, they're fresh.",
   "author": "leveluptuts",
   "license": "MIT",
@@ -52,6 +52,7 @@
     "prettier": "1.18.2",
     "react-tagsinput": "^3.19.0",
     "rollup": "^1.17.0",
+    "rollup-plugin-analyzer": "^3.2.1",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
@@ -63,8 +64,5 @@
   },
   "files": [
     "dist"
-  ],
-  "dependencies": {
-    "lodash": "^4.17.15"
-  }
+  ]
 }
