--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^10.0.3",
     "babel-plugin-react-require": "^3.1.1",
-    "cross-env": "^6.0.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
@@ -51,17 +50,18 @@
     "prettier": "1.18.2",
     "react-tagsinput": "^3.19.0",
     "rollup": "^1.21.4",
-    "rollup-plugin-analyzer": "^3.2.1",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-size-snapshot": "^0.10.0",
-    "rollup-plugin-url": "^2.2.2",
-    "zxcvbn": "^4.4.2"
+    "rollup-plugin-url": "^2.2.2"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "docz": "^2.0.0-rc.41"
+  }
 }
