--- a/fresh/package.json
+++ b/fresh/package.json
@@ -43,5 +43,8 @@
     "tsdx": "^0.9.2",
     "tslib": "^1.10.0",
     "typescript": "^3.6.3"
+  },
+  "dependencies": {
+    "styled-components": "^4.4.0"
   }
 }
