--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,12 @@ dist
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+*.log
+.DS_Store
+node_modules
+.cache
+.rts2_cache_cjs
+.rts2_cache_esm
+.rts2_cache_umd
+dist
