--- a/package.json
+++ b/package.json
@@ -1,67 +1,53 @@
 {
   "name": "@leveluptuts/fresh",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "They're dope, they're fresh.",
   "author": "leveluptuts",
   "license": "MIT",
   "repository": "leveluptuts/fresh",
   "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
-  "engines": {
-    "node": ">=8",
-    "npm": ">=5"
-  },
-  "scripts": {
-    "test": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom",
-    "build": "rollup -c",
-    "start": "rollup -c -w",
-    "prepare": "yarn run build",
-    "predeploy": "cd example && yarn install && yarn run build",
-    "deploy": "gh-pages -d example/build"
-  },
-  "peerDependencies": {
-    "prop-types": "^15.5.4",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@babel/preset-env": "7.6.0",
-    "@babel/preset-react": "7.0.0",
-    "@babel/preset-typescript": "^7.6.0",
-    "@svgr/rollup": "^4.3.2",
-    "babel-core": "^7.0.0-0",
-    "babel-eslint": "^10.0.3",
-    "babel-plugin-react-require": "^3.1.1",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.4.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-config-standard-react": "^9.2.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-react": "^7.10.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "markdown-to-jsx": "^6.10.3",
-    "prettier": "1.18.2",
-    "react-tagsinput": "^3.19.0",
-    "rollup": "^1.21.4",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-size-snapshot": "^0.10.0",
-    "rollup-plugin-url": "^2.2.2"
-  },
+  "module": "dist/fresh.esm.js",
+  "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "scripts": {
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test --env=jsdom",
+    "lint": "tsdx lint"
+  },
+  "peerDependencies": {
+    "react": ">=16"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "autoprefixer": "^9.6.1",
+    "husky": "^3.0.5",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-tagsinput": "^3.19.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "tsdx": "^0.9.2",
+    "tslib": "^1.10.0",
+    "typescript": "^3.6.3"
+  },
   "dependencies": {
-    "docz": "^2.0.0-rc.41"
+    "markdown-to-jsx": "^6.10.3",
+    "styled-components": "^4.4.0"
   }
 }
