--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leveluptuts/fresh",
-  "version": "0.0.27",
+  "version": "0.0.28",
   "description": "They're dope, they're fresh.",
   "author": "leveluptuts",
   "license": "MIT",
@@ -18,7 +18,10 @@
     "lint": "tsdx lint"
   },
   "peerDependencies": {
-    "react": ">=16"
+    "markdown-to-jsx": "^6.10.3",
+    "react": ">=16",
+    "react-tagsinput": "^3.19.0",
+    "styled-components": "^4.4.1"
   },
   "prettier": {
     "printWidth": 80,
@@ -32,17 +35,19 @@
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "autoprefixer": "^9.7.3",
+    "docz": "^2.2.0",
     "husky": "^3.1.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": ">= 0.14.0",
+    "react-dom": ">= 16.8.0",
     "rollup-plugin-postcss": "^2.0.3",
     "tsdx": "^0.11.0",
     "tslib": "^1.10.0",
     "typescript": "^3.7.3"
   },
   "dependencies": {
-    "markdown-to-jsx": "^6.10.3",
+    "markdown-to-jsx": "^6.11.0",
+    "react-is": ">= 16.8.0",
     "react-tagsinput": "^3.19.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^5.0.1"
   }
 }
