--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,11 +8,15 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: Automated Version Bump
+          uses: phips28/gh-action-bump-version@v7.1.0
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
           node-version: 10
       - run: npm install
+      - run: npm run build
       - run: npm test
       - uses: JS-DevTools/npm-publish@v1
         with:
