--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Sets GH Actions
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: Automated Version
         uses: phips28/gh-action-bump-version@v7.1.0
       - uses: actions/checkout@v1
