--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,12 +10,11 @@ jobs:
     steps:
       - name: Sets GH Actions
         uses: actions/checkout@v2
-      - name: Automated Version
-        uses: phips28/gh-action-bump-version@v7.1.0
-      - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
           node-version: 10
+      - name: Automated Version
+        uses: phips28/gh-action-bump-version@v7.1.0s
       - run: npm install
       - run: npm run build
       - run: npm test
