--- a/example/package.json
+++ b/example/package.json
@@ -8,11 +8,12 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
+    "react": "^16.13.1",
     "react-app-polyfill": "^1.0.0",
+    "react-dom": "^16.13.1",
     "react-syntax-highlighter": "^12.2.1"
   },
   "alias": {
-    "react": "../node_modules/react",
     "react-dom": "../node_modules/react-dom/profiling",
     "scheduler/tracing": "../node_modules/scheduler/tracing-profiling"
   },
