--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leveluptuts/fresh",
-  "version": "0.1.11",
+  "version": "0.1.14",
   "description": "They're dope, they're fresh.",
   "author": "leveluptuts",
   "license": "MIT",
@@ -37,17 +37,15 @@
     "@types/react-dom": "^16.9.8",
     "autoprefixer": "^9.8.5",
     "husky": "^4.2.5",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": ">=16",
+    "react-dom": ">= 16.8.0",
     "rollup-plugin-postcss": "^3.1.2",
-    "styled-components": ">= 5.0.0",
     "tsdx": "^0.13.2",
     "tslib": "^2.0.0",
     "typescript": "^3.9.6"
   },
   "dependencies": {
     "markdown-to-jsx": "^6.11.4",
-    "react": "^16.13.1",
     "react-is": "^16.13.1",
     "react-tagsinput": "^3.19.0"
   }
