--- a/package.json
+++ b/package.json
@@ -45,8 +45,11 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
+    "immer": "^7.0.7",
     "markdown-to-jsx": "^6.11.4",
     "react-is": "^16.13.1",
-    "react-tagsinput": "^3.19.0"
+    "react-tagsinput": "^3.19.0",
+    "state": "^0.2.0",
+    "zustand": "^3.0.1"
   }
 }
